[gd_scene load_steps=6 format=2]

[ext_resource path="res://3D/Levels/Props/Nodes/Platform_2x2.tscn" type="PackedScene" id=1]
[ext_resource path="res://3D/Levels/Props/Nodes/Slope.tscn" type="PackedScene" id=2]
[ext_resource path="res://3D/Levels/Props/Nodes/Platform_1x1.tscn" type="PackedScene" id=3]
[ext_resource path="res://3D/Ennemies/Turret/Nodes/Turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://3D/Levels/Level 5/Room Left.gd" type="Script" id=6]

[node name="Room Left" instance=ExtResource( 1 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 1, 0, 4.37114e-07, 0, -5, 0, 0, 0 )
script = ExtResource( 6 )

[node name="Platform_2x2" parent="." index="0" instance=ExtResource( 1 )]
transform = Transform( 1, 0, -3.55271e-15, 0, 1, 0, 7.10543e-15, 0, 0.5, 3.55271e-15, 1, -0.5 )

[node name="Turret5" parent="Platform_2x2" index="0" instance=ExtResource( 5 )]
transform = Transform( -3.25841e-08, 0, -0.2, 0, 1, 0, 0.4, 0, -6.51682e-08, 0.899999, 0, -0.8 )
fire_rate = 0.4
bullet_speed = 3.0

[node name="Turret4" parent="Platform_2x2" index="1" instance=ExtResource( 5 )]
transform = Transform( 0.2, 0, 3.49691e-08, 0, 1, 0, -6.99382e-08, 0, 0.4, -0.9, 0, -0.8 )
fire_rate = 0.4
bullet_speed = 3.0

[node name="Platform_1x1" parent="Platform_2x2" index="2" instance=ExtResource( 3 )]
transform = Transform( 0.2, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0, 0.88 )

[node name="Slope" parent="Platform_2x2" index="4" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, 0.4 )

[node name="Slope2" parent="Platform_2x2" index="5" instance=ExtResource( 2 )]
transform = Transform( -0.2, 0, -7.54979e-08, 0, 1, 0, 3.01991e-08, 0, -0.5, -0.899995, -1, 1.48 )

[node name="Platform_2x2" parent="Platform_2x2" index="6" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="Turret" parent="." index="2" instance=ExtResource( 5 )]
transform = Transform( -0.2, 0, -1.74845e-08, 0, 1, 0, 1.74845e-08, 0, -0.2, 0.6, 0, 1 )
bullet_speed = 4.0

[node name="Platform_1x1" parent="Turret" index="2" instance=ExtResource( 3 )]

[node name="Turret3" parent="." index="3" instance=ExtResource( 5 )]
transform = Transform( 0.2, 0, 3.49691e-08, 0, 1, 0, -3.49691e-08, 0, 0.2, -0.4, 0, 0.0999995 )
bullet_speed = 4.0

[node name="Turret2" parent="." index="4" instance=ExtResource( 5 )]
transform = Transform( -0.0174311, 0, -0.199239, 0, 1, 0, 0.199239, 0, -0.0174311, 0.34, 0, 0.12 )
fire_rate = 0.3

[node name="Timer2" type="Timer" parent="Turret2" index="2"]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="Turret2/Timer2" to="." method="_on_Timer2_timeout"]
